gunakan https://github.com/echenley/react-dnd-nestable/blob/master/demos/demo1-nested-list/index.html

--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "git": "^0.1.5",
     "react": "^15.6.1",
     "react-dnd": "^2.4.0",
     "react-dnd-html5-backend": "^2.4.1",
+    "react-dnd-nestable": "github:echenley/react-dnd-nestable",
     "react-dom": "^15.6.1",
     "react-scripts": "1.0.10"
   },
